modules/vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "${var.application}-vpc"
    Application = var.application
  }
}
